--- a/template.yaml
+++ b/template.yaml
@@ -30,7 +30,7 @@ Resources:
       Layers:
         - !Ref MyLambdaLayer
       Architectures:
-      - x86_64
+      - arm64
       Events:
         HelloWorld:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
