--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,7 +31,7 @@ jobs:
           aws-region: us-east-2
 
     - name: Sam Build
-      run: sam build --use-container 
+      run: sam build --use-container --debug
 
     - name: Deploy SAM application
       run: |
